# bteval

./: .flake8  .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml
src/bteval/: __init__.py  metrics.py
tests/: test_metrics.py
